--- a/src/ImageClassifier/ImageClassifier.csproj
+++ b/src/ImageClassifier/ImageClassifier.csproj
@@ -1,13 +1,13 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.ML" Version="0.7.0" />
-    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="0.7.0" />
-    <PackageReference Include="Microsoft.ML.TensorFlow" Version="0.7.0" />
+    <PackageReference Include="Microsoft.ML" Version="1.0.0" />
+    <PackageReference Include="Microsoft.ML.ImageAnalytics" Version="1.0.0" />
+    <PackageReference Include="Microsoft.ML.TensorFlow" Version="0.12.0" />
   </ItemGroup>
 
 </Project>
